# TokenKeeper

./: .gitignore  .mcp.json  .mcp.json.example  CHANGELOG.md  CONTRIBUTING.md  IMPLEMENTATION-GUIDE.md  LICENSE  QUICKSTART.md  README.md  main.py  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  publish.yml
scripts/: __init__.py  health_check.py  validate_chromadb.py  validate_ollama.py  validate_timeout.py
src/knowledge_rag/: __init__.py  __main__.py  bm25_index.py  config.py  discovery.py  embeddings.py  health.py  indexer.py  ingestion.py  search.py  server.py  storage.py  types.py  watcher.py
src/tokenkeeper/: __init__.py  __main__.py  bm25_index.py  config.py  discovery.py  embeddings.py  health.py  indexer.py  ingestion.py  search.py  server.py  storage.py  types.py  watcher.py
tests/: __init__.py  test_acceptance.py  test_agent_comparison.py  test_bm25_index.py  test_chromadb.py  test_config.py  test_discovery.py  test_embeddings.py  test_health.py  test_health_check.py  test_indexer.py  test_ingestion.py  test_integration_embedding.py  test_integration_ingestion.py  test_integration_mcp.py  test_integration_search.py  test_ollama.py  test_practical_token_savings.py  test_search.py  test_server.py  test_storage.py  test_timeout.py  test_token_benchmarks.py  test_watcher.py
